vlc-java/src/main/java/com/tek/vlc/jna/LibvlcLibrary.java

    /**
     * Release media descriptor's elementary streams description array<br>
     * \version LibVLC 2.1.0 and later.<br>
     * \param p_tracks tracks info array to release<br>
     * \param i_count number of elements in the array<br>
     * Original signature : <code>void libvlc_media_tracks_release(libvlc_media_track_t**, unsigned)</code><br>
     * <i>native declaration : line 1484</i>
     */
    void libvlc_media_tracks_release(libvlc_media_track_t.ByReference p_tracks[], int i_count);
    /**
     * Get the media type of the media descriptor object<br>
     * \version LibVLC 3.0.0 and later.<br>
     * \see libvlc_media_type_t<br>
     * \param p_md media descriptor object<br>
     * \return media type<br>
     * Original signature : <code>libvlc_media_type_t libvlc_media_get_type(libvlc_media_t*)</code><br>
     * <i>native declaration : line 1499</i><br>
     * @deprecated use the safer method {@link #libvlc_media_get_type(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    int libvlc_media_get_type(Pointer p_md);
    /**
     * Get the media type of the media descriptor object<br>
     * \version LibVLC 3.0.0 and later.<br>
     * \see libvlc_media_type_t<br>
     * \param p_md media descriptor object<br>
     * \return media type<br>
     * Original signature : <code>libvlc_media_type_t libvlc_media_get_type(libvlc_media_t*)</code><br>
     * <i>native declaration : line 1499</i>
     */
    int libvlc_media_get_type(PointerByReference p_md);
    /**
     * Create an empty Media Player object<br>
     * \param p_libvlc_instance the libvlc instance in which the Media Player<br>
     *        should be created.<br>
     * \return a new media player object, or NULL on error.<br>
     * Original signature : <code>libvlc_media_player_t* libvlc_media_player_new(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 1660</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_new(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    PointerByReference libvlc_media_player_new(Pointer p_libvlc_instance);
    /**
     * Create an empty Media Player object<br>
     * \param p_libvlc_instance the libvlc instance in which the Media Player<br>
     *        should be created.<br>
     * \return a new media player object, or NULL on error.<br>
     * Original signature : <code>libvlc_media_player_t* libvlc_media_player_new(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 1660</i>
     */
    PointerByReference libvlc_media_player_new(PointerByReference p_libvlc_instance);
    /**
     * Create a Media Player object from a Media<br>
     * \param p_md the media. Afterwards the p_md can be safely<br>
     *        destroyed.<br>
     * \return a new media player object, or NULL on error.<br>
     * Original signature : <code>libvlc_media_player_t* libvlc_media_player_new_from_media(libvlc_media_t*)</code><br>
     * <i>native declaration : line 1669</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_new_from_media(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    PointerByReference libvlc_media_player_new_from_media(Pointer p_md);
    /**
     * Create a Media Player object from a Media<br>
     * \param p_md the media. Afterwards the p_md can be safely<br>
     *        destroyed.<br>
     * \return a new media player object, or NULL on error.<br>
     * Original signature : <code>libvlc_media_player_t* libvlc_media_player_new_from_media(libvlc_media_t*)</code><br>
     * <i>native declaration : line 1669</i>
     */
    PointerByReference libvlc_media_player_new_from_media(PointerByReference p_md);
    /**
     * Release a media_player after use<br>
     * Decrement the reference count of a media player object. If the<br>
     * reference count is 0, then libvlc_media_player_release() will<br>
     * release the media player object. If the media player object<br>
     * has been released, then it should not be used again.<br>
     * \param p_mi the Media Player to free<br>
     * Original signature : <code>void libvlc_media_player_release(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1680</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_release(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_media_player_release(Pointer p_mi);
    /**
     * Release a media_player after use<br>
     * Decrement the reference count of a media player object. If the<br>
     * reference count is 0, then libvlc_media_player_release() will<br>
     * release the media player object. If the media player object<br>
     * has been released, then it should not be used again.<br>
     * \param p_mi the Media Player to free<br>
     * Original signature : <code>void libvlc_media_player_release(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1680</i>
     */
    void libvlc_media_player_release(PointerByReference p_mi);
    /**
     * Retain a reference to a media player object. Use<br>
     * libvlc_media_player_release() to decrement reference count.<br>
     * \param p_mi media player object<br>
     * Original signature : <code>void libvlc_media_player_retain(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1688</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_retain(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_media_player_retain(Pointer p_mi);
    /**
     * Retain a reference to a media player object. Use<br>
     * libvlc_media_player_release() to decrement reference count.<br>
     * \param p_mi media player object<br>
     * Original signature : <code>void libvlc_media_player_retain(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1688</i>
     */
    void libvlc_media_player_retain(PointerByReference p_mi);
    /**
     * Set the media that will be used by the media_player. If any,<br>
     * previous md will be released.<br>
     * \param p_mi the Media Player<br>
     * \param p_md the Media. Afterwards the p_md can be safely<br>
     *        destroyed.<br>
     * Original signature : <code>void libvlc_media_player_set_media(libvlc_media_player_t*, libvlc_media_t*)</code><br>
     * <i>native declaration : line 1698</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_set_media(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_media_player_set_media(Pointer p_mi, Pointer p_md);
    /**
     * Set the media that will be used by the media_player. If any,<br>
     * previous md will be released.<br>
     * \param p_mi the Media Player<br>
     * \param p_md the Media. Afterwards the p_md can be safely<br>
     *        destroyed.<br>
     * Original signature : <code>void libvlc_media_player_set_media(libvlc_media_player_t*, libvlc_media_t*)</code><br>
     * <i>native declaration : line 1698</i>
     */
    void libvlc_media_player_set_media(PointerByReference p_mi, PointerByReference p_md);
    /**
     * Get the media used by the media_player.<br>
     * \param p_mi the Media Player<br>
     * \return the media associated with p_mi, or NULL if no<br>
     *         media is associated<br>
     * Original signature : <code>libvlc_media_t* libvlc_media_player_get_media(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1708</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_get_media(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    PointerByReference libvlc_media_player_get_media(Pointer p_mi);
    /**
     * Get the media used by the media_player.<br>
     * \param p_mi the Media Player<br>
     * \return the media associated with p_mi, or NULL if no<br>
     *         media is associated<br>
     * Original signature : <code>libvlc_media_t* libvlc_media_player_get_media(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1708</i>
     */
    PointerByReference libvlc_media_player_get_media(PointerByReference p_mi);
    /**
     * Get the Event Manager from which the media player send event.<br>
     * \param p_mi the Media Player<br>
     * \return the event manager associated with p_mi<br>
     * Original signature : <code>libvlc_event_manager_t* libvlc_media_player_event_manager(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1716</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_event_manager(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    PointerByReference libvlc_media_player_event_manager(Pointer p_mi);
    /**
     * Get the Event Manager from which the media player send event.<br>
     * \param p_mi the Media Player<br>
     * \return the event manager associated with p_mi<br>
     * Original signature : <code>libvlc_event_manager_t* libvlc_media_player_event_manager(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1716</i>
     */
    PointerByReference libvlc_media_player_event_manager(PointerByReference p_mi);
    /**
     * is_playing<br>
     * \param p_mi the Media Player<br>
     * \return 1 if the media player is playing, 0 otherwise<br>
     * \libvlc_return_bool<br>
     * Original signature : <code>int libvlc_media_player_is_playing(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1726</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_is_playing(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    int libvlc_media_player_is_playing(Pointer p_mi);
    /**
     * is_playing<br>
     * \param p_mi the Media Player<br>
     * \return 1 if the media player is playing, 0 otherwise<br>
     * \libvlc_return_bool<br>
     * Original signature : <code>int libvlc_media_player_is_playing(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1726</i>
     */
    int libvlc_media_player_is_playing(PointerByReference p_mi);
    /**
     * Play<br>
     * \param p_mi the Media Player<br>
     * \return 0 if playback started (and was already started), or -1 on error.<br>
     * Original signature : <code>int libvlc_media_player_play(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1734</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_play(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    int libvlc_media_player_play(Pointer p_mi);
    /**
     * Play<br>
     * \param p_mi the Media Player<br>
     * \return 0 if playback started (and was already started), or -1 on error.<br>
     * Original signature : <code>int libvlc_media_player_play(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1734</i>
     */
    int libvlc_media_player_play(PointerByReference p_mi);
    /**
     * Pause or resume (no effect if there is no media)<br>
     * \param mp the Media Player<br>
     * \param do_pause play/resume if zero, pause if non-zero<br>
     * \version LibVLC 1.1.1 or later<br>
     * Original signature : <code>void libvlc_media_player_set_pause(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 1743</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_set_pause(com.sun.jna.ptr.PointerByReference, int)} instead
     */
    @Deprecated 
    void libvlc_media_player_set_pause(Pointer mp, int do_pause);
